Correction style Collapse Equipments

--- a/src/style/fichelogement.scss
+++ b/src/style/fichelogement.scss
@@ -106,7 +106,6 @@
         }
         &--right {
             width: 50%;
-            display: flex;
             @media (max-width: 767.98px) {
                 width: 100%;
             }
